--- a/config.toml
+++ b/config.toml
@@ -9,14 +9,14 @@ publishDir            = "docs"				# 站点静态文件保存目录
 
 
 [params]
-    author        = "mzxi"
+    author        = "Demius"
     description   = "Demius 网址导航 | Hugo 主题 干饭 爱好者"
     upload        = "https://blog.demius.tech/"      # 左侧导航栏的"网站提交"
     about         = "https://blog.demius.tech/"	          # 左侧导航栏的"关于导航"页面(./about)
     repository    = "https://github.com/shenweiyan/WebStack-Hugo"  
     enablePreLoad = true					# 网站完全打开前预加载动画
-    textPreLoad   = "Mzxi 网址导航"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
-    expandSidebar = false					# 默认展开左侧边导航栏
+    textPreLoad   = "Demius 网址导航"				# 预加载的动画文字, 只有当enablePreLoad=true时生效
+    expandSidebar = true					# 默认展开左侧边导航栏
     logosPath     = "assets/images/logos"			# 网站每个导航地址logo存放地址
     defaultLogo   = "assets/images/logos/default.webp"		# logo图片资源不存在或者错误时, 默认显示的logo; 该参数如为空,将会一直加载对应的logo,直至成功
     nightMode     = false					# 默认站点为深色(夜间)模式
