--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
   HUGO_ENABLEGITINFO = "true"
   
 [context.deploy-preview]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL --verbose --verboseLog"
   
 [context.branch-deploy]
-  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
+  command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL --verbose --verboseLog"
