--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -4,7 +4,7 @@
   icon: far fa-star
   links: 
     - title: demius`blog
-      logo: tx.jpg
+      logo: https://api.iowen.cn/favicon/blog.demius.tech.png
       url: https://blog.demius.tech/
       description: 天行健，君子以自强不息
     - title: QQ 邮箱
