--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -4,7 +4,7 @@
   icon: far fa-star
   links: 
     - title: demius`blog
-      logo: https://api.iowen.cn/favicon/blog.demius.tech.png
+      logo: tx.jpg
       url: https://blog.demius.tech/
       description: 天行健，君子以自强不息
     - title: QQ 邮箱
@@ -40,7 +40,7 @@
           url: https://fanqienovel.com/
           description: 抖音旗下小说平台，流量最大
         - title: 作家助手
-          logo: 作家助手.png
+          logo: https://api.iowen.cn/favicon/write.qq.com.png
           url: https://write.qq.com/
           description: 最好的码字软件，目前
     - term: 云服务器
