--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -11,18 +11,14 @@
       logo: tx.jpg
       url: https://blog.demius.tech/demiusadmin5214/
       description: 博客后台
-    - title: QQ 邮箱
-      logo: qq邮箱.png
-      url: http://mail.qq.com/
-      description: 腾讯 QQ 邮箱。
+    - title: 1panel·后台
+      logo: 1panel.jpg
+      url: http://103.207.68.122:17113/
+      description: 博客后台
     - title: GitHub
       logo: github.png
       url: https://github.com/
-      description: GitHub 开源社区。
-    - title: 语雀
-      logo: 语雀.webp
-      url: https://www.yuque.com/
-      description: 专业的云端知识库。
+      description: GitHub 开源社区
     - title: 关注我们
       logo: 关注.jpg
       url: https://blog.demius.tech/
@@ -30,10 +26,10 @@
       description: 微信公众号：我在策
 
 
-- taxonomy: 科研办公
+- taxonomy: 创作之地
   icon: fas fa-flask fa-lg
   list:
-    - term: 作家站点
+    - term: 小说
       links:
         - title: 起点中文网
           logo: 起点中文网.png
@@ -47,6 +43,16 @@
           logo: 作家助手.png
           url: https://write.qq.com/
           description: 最好的码字软件，目前
+    - term: 自媒体
+      links:
+        - title: 公众号平台
+          logo: 微信公众号.png
+          url: https://mp.weixin.qq.com/
+          description: 再小的个体也有自己的品牌。
+        - title: 知乎
+          logo: 知乎.png
+          url: https://www.zhihu.com/
+          description: 知乎社区。
     - term: 云服务器
       links:
         - title: 阿里云
@@ -72,50 +78,21 @@
         - title: 糖果云
           logo: 糖果云.png
           url: https://www.sugarhosts.com/zh-cn/
-          description: 欧洲地区领先的互联网服务提供商，成立于2009年7月。
-        - title: 青椒云
-          logo: 青椒云.jpg
-          url: https://www.qingjiaocloud.com/
-          description: 云桌面,一站式云电脑服务平台。
-    
-
-- taxonomy: 社交自媒体
-  icon: fas fa-flask fa-lg
-  list:
-    - term: 自媒体
-      links:
-        - title: 公众号平台
-          logo: 微信公众号.png
-          url: https://mp.weixin.qq.com/
-          description: 再小的个体也有自己的品牌。
-        - title: 知乎
-          logo: 知乎.png
-          url: https://www.zhihu.com/
-          description: 知乎社区。
-        - title: 起点中文网
-          logo: 起点中文网.png
-          url: https://www.qidian.com/
-          description: 网文正道成神之地
-        - title: 番茄小说网
-          logo: 番茄小说.png
-          url: https://fanqienovel.com/
-          description: 抖音旗下小说平台，流量最大
-        - title: 作家助手
-          logo: 作家助手.png
-          url: https://write.qq.com/
-          description: 最好的码字软件，目前
-
-
+          description: 欧洲地区领先的互联网服务提供商，成立于2009年7月
       
-- taxonomy: 资源网盘
+- taxonomy: 网盘文档
   icon: far fa-folder-open fa-lg
   list:
-    - term: 网盘资源
+    - term: 网盘
       links:
         - title: 百度网盘
           logo: 百度网盘.jpg
           url: http://pan.baidu.com/
-          description: https://pan.baidu.com/.
+          description: https://pan.baidu.com/
+        - title: 夸克网盘
+          logo: 夸克.png
+          url: https://www.quark.cn/
+          description: 网盘、浏览器
         - title: 阿里云盘
           logo: 阿里云盘.png
           url: https://www.aliyundrive.com/
@@ -131,7 +108,17 @@
         - title: 123云盘
           logo: 123.png
           usrl: https://www.123pan.com/
-          description: 123盘官网。        
+          description: 123盘官网。 
+    - term: 文档
+      links:
+        - title: 飞书
+          logo: 飞书.png
+          url: https://www.feishu.cn/
+          description: 抖音旗下文档办公软件
+        - title: 语雀
+          logo: 语雀.webp
+          url: https://www.yuque.com/
+          description: 专业的云端知识库。      
 
 - taxonomy: 开发设计
   icon: fas fa-tools fa-lg
@@ -150,7 +137,7 @@
           logo: 开源中国.jpg
           url: https://www.oschina.net/
           description: 中文开源技术交流社区。
-    - term: 视频教程
+    - term: 教程
       links:
         - title: 慕课网
           url: https://www.imooc.com/
@@ -226,17 +213,7 @@
         - title: 书栈网
           url: https://www.bookstack.cn/
           logo: 书栈网.jpg
-          description: IT 互联网开源编程书籍免费阅读与下载。
-    - term: 小说网
-      links:
-        - title: 起点中文网
-          logo: 起点中文网.png
-          url: https://www.qidian.com/
-          description: 网文正道成神之地
-        - title: 番茄小说网
-          logo: 番茄小说.png
-          url: https://fanqienovel.com/
-          description: 抖音旗下小说平台，流量最大
+          description: IT 互联网开源编程书籍免费阅读与下载
     - term: 漫画壁纸
       links:
         - title: Bangumi
@@ -249,10 +226,10 @@
           description: wallpaper国内镜像站
 
 
-- taxonomy: 悠闲娱乐
+- taxonomy: 影音视频
   icon: fas fa-film fa-lg
   list:
-    - term: 影音视频
+    - term: 视频
       links:
         - title: 腾讯视频
           logo: 腾讯视频.png
@@ -269,7 +246,9 @@
         - title: 哔哩哔哩
           logo: 哔哩哔哩.png
           url: https://www.bilibili.com/
-          description: Bilibili 视频弹幕网站。
+          description: Bilibili 视频弹幕网站
+    - term: 音乐
+      links:
         - title: 网易云音乐
           logo: 网易云音乐.jpg
           url: https://music.163.com/
