--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -81,7 +81,7 @@
           logo: 光算云.png
           url: https://www.lightcc.cloud/
           description: 再小的个体也有自己的品牌。
-        - title: 共享工作流
+        - title: comfyworkflows共享工作流
           logo: 光算云.png
           url: https://comfyworkflows.com/videos
           description: 再小的个体也有自己的品牌。
@@ -333,4 +333,34 @@
           logo: 音乐磁场.png
           url: https://hifini.com/
           description: 一个由音乐爱好者维护的分享平台。
+
+
+
+- taxonomy: 导航站点
+  icon: fas fa-film fa-lg
+  list:
+    - term: AI
+      links:
+        - title: AI导航网
+          logo: aidaohang.png
+          url: https://www.ainav.cn/
+          description: AI导航网站
+        - title: 工具导航网
+          logo: gongju.png
+          url: https://toolsdar.cn/
+          description: 各种实用工具
+        - title: AI标签页
+          logo: aibiaoqian.png
+          url: https://www.aitags.cn/
+          description: AI导航网站
+        - title: Demius导航
+          logo: 哔哩哔哩.png
+          url: https://dh.demius.tech/
+          description: 巴拉巴拉小魔仙，古他那
+    - term: 自媒体工作台
+      links:
+        - title: 自媒体工具
+          logo: 网易云音乐.jpg
+          url: https://zmt.cn/
+          description: 玩自媒体需要用的工具
         
