--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -323,6 +323,22 @@
           logo: 哔哩哔哩.png
           url: https://www.bilibili.com/
           description: Bilibili 视频弹幕网站
+        - title: 动漫巴士发布页
+          logo: 动漫巴士.png
+          url: https://dm84.pro/
+          description: 无码速度站
+        - title: 悟空影视
+          logo: 悟空影视.png
+          url: https://www.chinasumadang.com/
+          description: 
+        - title: 可乐影视发布页
+          logo: kel.png
+          url: https://klyingshi.top/
+          description: 前身okfree
+        - title: AGE动漫
+          logo: age.png
+          url: https://www.age.tv/
+          description: 有码动漫，资源较全
     - term: 音乐
       links:
         - title: 网易云音乐
@@ -357,6 +373,10 @@
           logo: 哔哩哔哩.png
           url: https://dh.demius.tech/
           description: 巴拉巴拉小魔仙，古他那
+        - title: 可乐影视导航
+          logo: kel.png
+          url: https://klfans.com/
+          description: 影视站点导航站
     - term: 自媒体工作台
       links:
         - title: 自媒体工具
