--- a/data/headers.yml
+++ b/data/headers.yml
@@ -13,4 +13,4 @@
     - name: 博客
       url: https://blog.demius.tech/
     - name: 导航
-      url: https://aa.demius.tech/
+      url: https://dh.demius.tech/
