--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -208,6 +208,14 @@
           description: 中文开源技术交流社区。
     - term: 网站部署
       links:
+        - title: 1panel
+          url: https://1panel.cn/
+          logo: 1panel.png
+          description: 1Panel 提供了一个直观的 Web 界面和 MCP Server，帮助用户轻松管理 Linux 服务器中的网站、文件、容器、数据库以及大型语言模型
+        - title: 宝塔
+          url: https://www.bt.cn/
+          logo: bt.png
+          description: 安全高效的服务器运维面板
         - title: Netlify
           url: https://app.netlify.com/
           logo: netlify.png
@@ -221,7 +229,7 @@
         - title: 慕课网
           url: https://www.imooc.com/
           logo: imooc.png
-          description: 程序员的梦工厂（有UI课程）。
+          description: 程序员的梦工厂，有UI课程
         - title: 菜鸟教程
           url: https://www.runoob.com/
           logo: 菜鸟.png
