--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -29,7 +29,7 @@
 - taxonomy: 人工智能
   icon: far fa-star
   list:
-    - term: AI
+    - term: 对话综合体AI
       links:
         - title: 豆包
           logo: 豆包.png
@@ -62,7 +62,9 @@
         - title: 知乎直答
           logo: 知乎直答.png
           url: https://zhida.zhihu.com/
-          description: 知乎知识库，论文专业
+          description: 知乎知识库，论文专业。    
+    - term: AI视频
+      links:
         - title: 即梦AI
           logo: 即梦.png
           url: https://jimeng.jianying.com/
@@ -78,9 +80,7 @@
         - title: 海螺AI
           logo: 海螺AI.png
           url: https://hailuoai.com/
-          description: 让你的创意变成大片
-    - term: AI视频
-      links:
+          description: 让你的创意变成大片。
         - title: 白日梦
           logo: bairim.png
           url: https://aibrm.com/
@@ -102,7 +102,7 @@
           description: 再小的个体也有自己的品牌。
        
 
-- taxonomy: 创作之地
+- taxonomy: 自媒体
   icon: fas fa-flask fa-lg
   list:
     - term: 小说
@@ -129,32 +129,7 @@
           logo: 知乎.png
           url: https://www.zhihu.com/
           description: 知乎社区。
-    - term: 云服务器
-      links:
-        - title: 阿里云
-          logo: 阿里云.jpg
-          url: https://www.aliyun.com/
-          description: 上云就上阿里云。
-        - title: 腾讯云
-          logo: 腾讯云.webp
-          url: https://cloud.tencent.com/
-          description: 产业智变，云启未来。
-        - title: 华为云
-          logo: 华为云.png
-          url: https://www.huaweicloud.com/
-          description: 提供云计算服务+智能，见未来-华为云。
-        - title: 天翼云
-          logo: 天翼云.png
-          url: https://www.ctyun.cn/
-          description: 电信旗下云服务。
-        - title: 雨云
-          logo: 雨云.png
-          url: https://www.rainyun.com/home
-          description: 让天下服主，安心睡觉，大厂之下。
-        - title: 糖果云
-          logo: 糖果云.png
-          url: https://www.sugarhosts.com/zh-cn/
-          description: 欧洲地区领先的互联网服务提供商，成立于2009年7月
+    
       
 - taxonomy: 网盘文档
   icon: far fa-folder-open fa-lg
@@ -206,7 +181,23 @@
 
 - taxonomy: 开发设计
   icon: fas fa-tools fa-lg
-  list:              
+  list: 
+    - term: 前端开发AI
+      links:
+        - title: V0
+          logo: v0.png
+          url: https://v0.dev/
+          description: 对话式构建前端界面
+        - title: Blot.new
+          logo: bolt.png
+          url: https://bolt.new/
+          description: 在聊天中构建应用程序和网站。
+    - term: 后端开发AI
+      links:
+        - title: Cursor
+          logo: cursor.png
+          url: https://www.cursor.com/cn
+          description: 本地编辑器，适合长期后端开发。         
     - term: 代码源库
       links:
         - title: Gitee
@@ -239,6 +230,32 @@
           url: https://www.runoob.com/
           logo: 菜鸟.png
           description: 代码学习
+    - term: 云服务器
+      links:
+        - title: 阿里云
+          logo: 阿里云.jpg
+          url: https://www.aliyun.com/
+          description: 上云就上阿里云。
+        - title: 腾讯云
+          logo: 腾讯云.webp
+          url: https://cloud.tencent.com/
+          description: 产业智变，云启未来。
+        - title: 华为云
+          logo: 华为云.png
+          url: https://www.huaweicloud.com/
+          description: 提供云计算服务+智能，见未来-华为云。
+        - title: 天翼云
+          logo: 天翼云.png
+          url: https://www.ctyun.cn/
+          description: 电信旗下云服务。
+        - title: 雨云
+          logo: 雨云.png
+          url: https://www.rainyun.com/home
+          description: 让天下服主，安心睡觉，大厂之下。
+        - title: 糖果云
+          logo: 糖果云.png
+          url: https://www.sugarhosts.com/zh-cn/
+          description: 欧洲地区领先的互联网服务提供商，成立于2009年7月
     - term: 教程
       links:
         - title: 慕课网
@@ -300,7 +317,7 @@
         
 
 
-- taxonomy: 书籍漫画壁纸
+- taxonomy: 娱乐
   icon: fas fa-pencil-alt fa-lg
   list: 
     - term: 书籍
@@ -322,12 +339,7 @@
         - title: wallpaperscraft
           logo: wallpaperscraft.png
           url: https://wallpaperscraft.com/
-          description: wallpaper国内镜像站
-
-
-- taxonomy: 影音视频
-  icon: fas fa-film fa-lg
-  list:
+          description: wallpaper国内镜像站。
     - term: 视频
       links:
         - title: 腾讯视频
