--- a/data/webstack.yml
+++ b/data/webstack.yml
@@ -84,8 +84,7 @@
         - title: 白日梦
           logo: bairim.png
           url: https://aibrm.com/
-          description: 小说推文视频生成
-      links:
+          description: 小说推文视频生成。
         - title: 星流
           logo: xinliu.png
           url: https://www.xingliu.art/
